--- a/app/src/main/res/layout/messages_adapter_layout.xml
+++ b/app/src/main/res/layout/messages_adapter_layout.xml
@@ -66,6 +66,7 @@
                 android:layout_alignParentEnd="true"
                 android:text="1"
                 android:textSize="10sp"
+                android:textColor="@color/white"
                 android:gravity="center"
                 android:background="@drawable/round_back_theme_1000"
                 android:layout_marginEnd="20dp"
@@ -75,6 +76,13 @@
 
 
         </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="#14000000"/>
+
         
         
     </LinearLayout>
